--- a/src/App.css
+++ b/src/App.css
@@ -167,3 +167,8 @@ html {
          focus:border-red-500
          focus-visible:ring-red-500/40;
 }
+@layer components {
+  .progress-color-0 {
+    --p: 28 30% 42%;
+  }
+}
